apps/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: minio
spec:
  ports:
    - port: 9000
      targetPort: 9000
      name: api
    - port: 9090
      targetPort: 9090
      name: console
  selector:
    app: minio
