apps/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  annotations:
    traefik.ingress.kubernetes.io/buffer-limit: "0"
spec:
  ingressClassName: traefik
  rules:
    - host: console.minio.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: console
    - host: minio.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: api
